--- a/GoodVersion/app/src/main/res/layout/activity_server_select.xml
+++ b/GoodVersion/app/src/main/res/layout/activity_server_select.xml
@@ -19,10 +19,10 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/serverAddress"
             android:layout_weight="1"
             android:layout_column="2"
-            android:text="0.0.0.0:8080" />
+            android:text="http://192.168.2.137" />
 
     </TableRow>
 
